--- a/views/admin/abroad/abroad_nav_add.html
+++ b/views/admin/abroad/abroad_nav_add.html
@@ -20,6 +20,8 @@
     <div class="form-group">
         <label for="abroad_nav_name">导航名称：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_nav_name" placeholder="请输入留学导航名称" name="abroad_nav_name">
+        <label for="abroad_nav_url">导航url：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_nav_url" placeholder="请输入留学导航要跳转的链接，默认为'/'" name="abroad_nav_url">
         <label for="abroad_nav_order">标题顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_nav_order" placeholder="请输入留学导航顺序，小数字排前面，默认0" name="abroad_nav_order">
     </div>
