--- a/views/admin/abroad/abroad_nav_edit.html
+++ b/views/admin/abroad/abroad_nav_edit.html
@@ -25,6 +25,8 @@
     <div class="form-group">
         <label for="abroad_nav_name">留学导航名称：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_nav_name" value="{{abroad_nav.Abroad_nav_name}}" name="abroad_nav_name">
+        <label for="abroad_nav_url">留学导航url：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_nav_url" value="{{abroad_nav.Abroad_nav_url}}" name="abroad_nav_url">
         <label for="abroad_nav_order">导航内容标题顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_nav_order" value="{{abroad_nav.Abroad_nav_order}}" name="abroad_nav_order">
     </div>
