--- a/public/css/main_index.css
+++ b/public/css/main_index.css
@@ -773,11 +773,81 @@ body{
     height: 100%;
     float: left;
 }
+.study_abroad_content .study_abroad_mid .study_abroad_list{
+    width: 100%;
+    height: 100%;
+}
+.study_abroad_content .study_abroad_mid .study_abroad_top ul{
+    list-style: none;
+    padding: 0 0 5px 80px;
+    margin: 0;
+    border-bottom: 3px dotted #333;
+}
+.study_abroad_content .study_abroad_mid .study_abroad_bom ul{
+    border: none;
+    padding: 5px 0 0;
+}
+.study_abroad_content .study_abroad_mid .study_abroad_top ul li{
+    float: left;
+    width: 210px;
+    height: 106px;
+    padding: 5px 10px 40px;
+    margin-top: 10px;
+    border-left: 1px solid #333;
+    position: relative;
+}
+.study_abroad_content .study_abroad_mid .study_abroad_bom ul li{
+    margin-top: -1px;
+    padding-top: 10px;
+}
+.study_abroad_content .study_abroad_mid .study_abroad_top ul i{
+    display: block;
+    width: 77px;
+    height: 18px;
+    background: url("/public/images/study_abroad_list_bg.png") no-repeat 50%;
+    background-size: cover;
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+    line-height: 18px;
+    margin-bottom: 15px;
+}
+.study_abroad_content .study_abroad_mid .study_abroad_top ul p{
+    font-size: 14px;
+}
+.study_abroad_content .study_abroad_mid .study_abroad_top ul b{
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+    border: 1px solid #333;
+    position: absolute;
+    left: -10px;
+    bottom: -15px;
+    text-align: center;
+    line-height: 15px;
+}
+.study_abroad_content .study_abroad_mid .study_abroad_bom ul b{
+    left: -10px;
+    top: -15px;
+}
 .study_abroad_content .study_abroad_mid .mid_article{
     border-bottom: 1px dashed #ccc;
     height: 48%;
     overflow: hidden;
     margin-top: 10px;
+    position: relative;
+}
+.study_abroad_content .study_abroad_mid .mid_article .study_abroad_more{
+    position: absolute;
+    top:-5px;
+    right: 0;
+    font-size: 16px;
+    color: #333;
+}
+.study_abroad_content .study_abroad_mid .mid_article .study_abroad_more:hover{
+    color: #337ab7;
 }
 .study_abroad_content .study_abroad_mid .study_abroad_num{
     display: none;
@@ -786,7 +856,8 @@ body{
     display: block;
 }
 .study_abroad_content .mid_article ul{
-    width: 100%;
+    width: 720px;
+    height: 120px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -933,6 +1004,11 @@ body{
 .postgraduate .study_abroad_nav ul li:nth-child(1) a{
     color: #66CCCC;
 }
+.postgraduate .study_abroad_content .study_abroad_mid .study_abroad_top ul i{
+    background: url("/public/images/study_abroad_list_bg2.png") no-repeat;
+    background-size: cover;
+}
+
 /*
     中学留学样式修改
 */
@@ -948,6 +1024,10 @@ body{
 }
 .middle_school .study_abroad_nav ul li:nth-child(1) a{
     color: #993333;
+}
+.middle_school .study_abroad_content .study_abroad_mid .study_abroad_top ul i{
+    background: url("/public/images/study_abroad_list_bg3.png") no-repeat;
+    background-size: cover;
 }
 .middle_school .mid_img{
     position: relative;
