--- a/views/admin/page.html
+++ b/views/admin/page.html
@@ -1,12 +1,87 @@
-<nav>
-    <p style="text-align: center;padding-right: 5px">当前第<b>{{page}}</b>页</p>
-    <ul class="pager">
-        <li class="previous"><a href="/admin/{{forPage}}?page={% if (page-1)<1 %}{{1}}{%else%}{{page-1}}{%endif%}"><span aria-hidden="true">&larr;</span> 上一页</a></li>
-
-        <li style="padding-left: 40px">
-            一共有<b>{{count}}</b>条数据&nbsp;&nbsp;&nbsp;&nbsp;共<b>{% if pages<1 %}{{1}}{%else%}{{pages}}{%endif%}</b>页&nbsp;&nbsp;&nbsp;&nbsp;每页显示<b>{{limit}}</b>条数据&nbsp;&nbsp;&nbsp;&nbsp;
+<nav aria-label="Page navigation" class="page" style="position: relative">
+    <ul class="pagination pagination-lg">
+        <!--上一页的处理-->
+        {% if pages == 0 %}
+        {% else %}
+        {% if page == 1 %}
+        {% else %}
+        <li>
+            <a href="/admin/{{forPage}}?page={{page-1}}" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+            </a>
         </li>
+        {% endif %}
 
-        <li class="next"><a href="/admin/{{forPage}}?page={% if pages<1 %}{{1}}{% elseif (page+1)>pages %}{{pages}}{% else %}{{page+1}}{%endif%}">下一页 <span aria-hidden="true">&rarr;</span></a></li>
+        <!--分页前面部分的处理函数-->
+        {% if page < 5 %}
+            {% for pa in pagesFont %}
+            {% if pa < 6 %}
+                {% if pa == page %}
+                    <li class="active"><span style="margin-right: 10px">{{page}}</span></li>
+                {% else %}
+                    <li><a href="/admin/{{forPage}}?page={{pa}}">{{pa}}</a></li>
+                {% endif %}
+            {% elseif pa == 6 %}
+                <li><a class="none">...</a></li>
+            {% elseif loop.last %}
+                <li><a href="/admin/{{forPage}}?page={{pages}}">{{pages}}</a></li>
+            {% endif %}
+            {% endfor %}
+
+        <!--刚好尾页倒数5，最小分页数-->
+        {% elseif page == pages - 4 %}
+                <li><a href="/admin/{{forPage}}?page=1">1</a></li>
+                <li><a class="none">...</a></li>
+            {% for pa in pagesEnd %}
+                {% if pa == page %}
+            <li><a href="/admin/{{forPage}}?page={{page-1}}">{{page-1}}</a></li>
+            <li class="active"><span style="margin-right: 10px">{{page}}</span></li>
+                {% else %}
+                <li><a href="/admin/{{forPage}}?page={{pa}}">{{pa}}</a></li>
+                {% endif %}
+            {% endfor %}
+        <!--分页后面部分的处理函数-->
+        {% elseif page > pages - 5 %}
+                {% if pages == 5 %}
+                {% else %}
+                <li><a href="/admin/{{forPage}}?page=1">1</a></li>
+                <li><a class="none">...</a></li>
+                {% endif %}
+            {% for pa in pagesEnd %}
+                {% if pa == page %}
+                <li class="active"><span style="margin-right: 10px">{{page}}</span></li>
+                {% else %}
+                <li><a href="/admin/{{forPage}}?page={{pa}}">{{pa}}</a></li>
+                {% endif %}
+            {% endfor %}
+
+        <!--分页中间部分的处理函数-->
+        {% else %}
+            <li><a href="/admin/{{forPage}}?page=1">1</a></li>
+            <li><a class="none">...</a></li>
+            <li><a href="/admin/{{forPage}}?page={{page-2}}">{{page-2}}</a></li>
+            <li><a href="/admin/{{forPage}}?page={{page-1}}">{{page-1}}</a></li>
+            <li class="active"><span style="margin-right: 10px">{{page}}</span></li>
+            <li><a href="/admin/{{forPage}}?page={{page+1}}">{{page+1}}</a></li>
+            <li><a href="/admin/{{forPage}}?page={{page+2}}">{{page+2}}</a></li>
+            <li><a class="none">...</a></li>
+            <li><a href="/admin/{{forPage}}?page={{pages}}">{{pages}}</a></li>
+        {% endif %}
+
+        <!--下一页箭头的处理-->
+        {% if page == pages %}
+        {% else %}
+        <li>
+            <a href="/admin/{{forPage}}?page={{page+1}}" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        </li>
+        {% endif %}
+        {% endif %}
     </ul>
+    <div style="position: absolute; right: 0; top: 0">
+        <p style="font-size: 16px">总共有<b> {{count}} </b>条数据&nbsp;&nbsp;&nbsp;&nbsp;每页显示<b> {{limit}} </b>条</p>
+    </div>
 </nav>
+
+<link rel="stylesheet" href="/public/css/page.css">
