--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -56,12 +56,16 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">留学管理<span class="caret"></span></a>
                     <ul class="dropdown-menu">
+                        <li><a href="/admin/study_abroad/test">考试列表</a></li>
+                        <li><a href="/admin/study_abroad/test/add">考试添加</a></li>
                         <li><a href="/admin/study_abroad">留学列表</a></li>
                         <li><a href="/admin/study_abroad/add">留学添加</a></li>
                         <li><a href="/admin/study_abroad/nav">留学导航列表</a></li>
                         <li><a href="/admin/study_abroad/nav/add">留学导航添加</a></li>
                         <li><a href="/admin/study_abroad/nav/content">导航文章列表</a></li>
                         <li><a href="/admin/study_abroad/nav/content/add">导航文章添加</a></li>
+                        <li><a href="/admin/study_abroad/nav/enroll">录取案例列表</a></li>
+                        <li><a href="/admin/study_abroad/nav/enroll/add">录取案例添加</a></li>
                     </ul>
                 </li>
             </ul>
