--- a/views/admin/school/school_index.html
+++ b/views/admin/school/school_index.html
@@ -14,6 +14,7 @@
         <th>学校英文名称</th>
         <th>学校地区</th>
         <th>学校排名</th>
+        <th>录取人数</th>
         <th>学校图片名称</th>
         <th>操作</th>
     </tr>
@@ -23,6 +24,7 @@
         <td>{{school.School_en}}</td>
         <td>{{school.area.Area_name}}</td>
         <td>{{school.School_rank}}</td>
+        <td>{{school.School_enroll}}</td>
         <td>{{school.School_url}}</td>
         <td>
             <a href="/admin/school/edit?id={{school._id.toString()}}">修改</a>
