--- a/views/main/undergraduate_index.html
+++ b/views/main/undergraduate_index.html
@@ -3,6 +3,7 @@
 {% block title %}
 <title>英国本科留学</title>
 <link rel="stylesheet" href="/public/css/undergraduate_index.css">
+<script src="/public/js/undergraduate.js"></script>
 {% endblock %}
 
 {% block big_bg %}
@@ -173,8 +174,32 @@
         </ul>
     </div>
     <div class="major_right right">
-        <div class="major_part">
+        <div class="major_part" style="display: block">
             <p><strong>专业优势：</strong>英国的商业研究水平一直处于世界领先地位，并且拥有多达十三所的国际三大认证的商学院，数量位居全球之冠。英国提供全方位的商科专业，涵盖项目管理、工程管理、市场营销、人力资源、财务管理、物流管理等各个范畴。</p>
+            <p><strong>就业前景：</strong>英国的服务业是本国第一产业，其中商业咨询研究比例居首，为应届毕业生提供大量就业职位。而且英国拥有全欧最多的全球500强公司区域总部，提供大量管理职位。在英国一个应届毕业生可获得25,000英镑年薪，而有三年经验的求职者的平均年薪在50,000英镑左右。</p>
+            <div class="major_school">
+                <h3>院校推荐</h3>
+                <p>华威大学、巴斯大学、布里斯托大学、伦敦政治经济学院、埃克塞特大学、格拉斯哥大学、爱丁堡大学等。</p>
+            </div>
+        </div>
+        <div class="major_part">
+            <p><strong>专业优势：</strong>2</p>
+            <p><strong>就业前景：</strong>英国的服务业是本国第一产业，其中商业咨询研究比例居首，为应届毕业生提供大量就业职位。而且英国拥有全欧最多的全球500强公司区域总部，提供大量管理职位。在英国一个应届毕业生可获得25,000英镑年薪，而有三年经验的求职者的平均年薪在50,000英镑左右。</p>
+            <div class="major_school">
+                <h3>院校推荐</h3>
+                <p>华威大学、巴斯大学、布里斯托大学、伦敦政治经济学院、埃克塞特大学、格拉斯哥大学、爱丁堡大学等。</p>
+            </div>
+        </div>
+        <div class="major_part">
+            <p><strong>专业优势：</strong>3</p>
+            <p><strong>就业前景：</strong>英国的服务业是本国第一产业，其中商业咨询研究比例居首，为应届毕业生提供大量就业职位。而且英国拥有全欧最多的全球500强公司区域总部，提供大量管理职位。在英国一个应届毕业生可获得25,000英镑年薪，而有三年经验的求职者的平均年薪在50,000英镑左右。</p>
+            <div class="major_school">
+                <h3>院校推荐</h3>
+                <p>华威大学、巴斯大学、布里斯托大学、伦敦政治经济学院、埃克塞特大学、格拉斯哥大学、爱丁堡大学等。</p>
+            </div>
+        </div>
+        <div class="major_part">
+            <p><strong>专业优势：</strong>4</p>
             <p><strong>就业前景：</strong>英国的服务业是本国第一产业，其中商业咨询研究比例居首，为应届毕业生提供大量就业职位。而且英国拥有全欧最多的全球500强公司区域总部，提供大量管理职位。在英国一个应届毕业生可获得25,000英镑年薪，而有三年经验的求职者的平均年薪在50,000英镑左右。</p>
             <div class="major_school">
                 <h3>院校推荐</h3>
