--- a/views/admin/abroad/abroad_nav_enroll_edit.html
+++ b/views/admin/abroad/abroad_nav_enroll_edit.html
@@ -23,6 +23,8 @@
     </div>
 
     <div class="form-group">
+        <label for="abroad_enroll_name">文章标题：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_enroll_name" value="{{abroad_enroll.Abroad_enroll_name}}" name="abroad_enroll_name">
         <label for="school">录取学校：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="school" value="{{abroad_enroll.school.School_zn}}" name="school">
         <label for="abroad_enroll_subject">录取专业：</label>
@@ -59,6 +61,8 @@
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_enroll_score2" value="{{abroad_enroll.Abroad_enroll_score2}}" name="abroad_enroll_score2">
         <label for="abroad_enroll_url">案例url：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_enroll_url" value="{{abroad_enroll.Abroad_enroll_url}}" name="abroad_enroll_url">
+        <label for="abroad_enroll_order">案例顺序：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_enroll_order" value="{{abroad_enroll.Abroad_enroll_order}}" name="abroad_enroll_order">
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
