--- a/public/css/main_index.css
+++ b/public/css/main_index.css
@@ -981,6 +981,9 @@ body{
     margin: 0;
     padding: 5px 0;
 }
+.study_abroad .case_content ul:nth-child(2){
+    display: block;
+}
 .study_abroad .case_content ul li{
     color: #777;
     font-size: 12px;
