--- a/views/admin/abroad/abroad_nav_enroll_add.html
+++ b/views/admin/abroad/abroad_nav_enroll_add.html
@@ -49,6 +49,8 @@
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_enroll_score2" placeholder="请输入学生成绩，数字类型" name="abroad_enroll_score2">
         <label for="abroad_enroll_url">案例url：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_enroll_url" placeholder="请输入文章跳转链接,系统会自动在链接后加.html，所以这里填文章页面的英文、数字名称" name="abroad_enroll_url">
+        <label for="abroad_enroll_order">案例顺序：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_enroll_order" placeholder="案例展示的顺序，默认为10" name="abroad_enroll_order">
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
